[package]
name = "bcsp-core"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/bcsp"

[lib]
name = "bcsp_core"
path = "lib.rs"

[dependencies]
zeroize = "1"
foundations = { git = "https://github.com/Berylsoft/foundations", features = [
    "xor",
    "now",
    "timestamp",
    "byterepr",
    "byterepr-macros",
] }
bae-core = { path = "../core" }
