[package]
name = "bcsp-core"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/bcsp"

[lib]
name = "bcsp_core"
path = "lib.rs"

[dependencies]
foundations = { git = "https://github.com/Berylsoft/foundations", features = [
    "xor",
    "now",
    "timestamp",
    "byterepr",

    "byterepr-macros",
] }
cshake = { git = "https://github.com/Berylsoft/keccak-state", features = ["zeroize-on-drop"] }
curve25519-dalek = "4.1.1"
zeroize = "1"
